--- a/src/view/Balanco/balanco.html
+++ b/src/view/Balanco/balanco.html
@@ -30,7 +30,7 @@
                 <img src="/imagem/menu/caixa.png" alt="Caixa">
                 <p>Fluxo de Caixa</p>
              </a>
-             <a href="/financas" class="button-menu">
+             <a href="/financiamento" class="button-menu">
                 <img src="/imagem/menu/financas.png" alt="Finanças">
                 <p>Financiamento</p>
              </a>
@@ -61,7 +61,7 @@
                 </tr>
                 <tr>
                     <td class="valor"><a href="/ativoPermanente">Ativo Permanente</a></td>
-                    <td class="valor">R$ {{ativoPermanete}}</td>
+                    <td class="valor">R$ {{ativoPermanente}}</td>
                 </tr>
                 <tr>
                     <td class="valor" colspan="2">Total: R$ {{totalAtivo}}</td>
@@ -102,15 +102,9 @@
                     <td class="valor">R$ {{capitalSocial}}</td>
                 </tr>
                 <tr>
-                    <td class="valor">Lucros Acumulados</td>
-                    <td class="valor">R$ {{lucroAcumulado}}</td>
+                    <td class="valor">Patrimonio Líquido</td>
+                    <td class="valor">R$ {{patrimonioLiquido}}</td>
                 </tr>
-                <tr>
-                    <td class="valor">Prejuízo Acumulado</td>
-                    <td class="valor">R$ {{prejuizoAcumulado}}</td>
-                </tr>
-                <tr>
-                    <td class="valor" colspan="2">Total: R$ {{patrimonioLiquido}}</td>
             </table> 
         </div>     
     </div>
