--- a/src/view/FluxoCaixa/visualizarSaida.html
+++ b/src/view/FluxoCaixa/visualizarSaida.html
@@ -30,7 +30,7 @@
                 <img src="/imagem/menu/caixa.png" alt="Caixa">
                 <p>Fluxo de Caixa</p>
              </a>
-             <a href="/financas" class="button-menu">
+             <a href="/financiamento" class="button-menu">
                 <img src="/imagem/menu/financas.png" alt="Finanças">
                 <p>Financiamento</p>
              </a>
@@ -72,17 +72,7 @@
             </fieldset>
         </form>   
 
-        <div class="botoes-footer">            
-            <a class="botao-excluir" href="/excluirSaida">
-                <p>Excluir Saida</p>
-            </a>
-
-            <a class="botao-editar"  href="/editarSaida">
-                <p>Editar Saida</p>
-            </a>
-        </div>
         
-
     </div>
 </body>
 </html>
