--- a/src/view/home.html
+++ b/src/view/home.html
@@ -29,9 +29,17 @@
                 <img src="/imagem/menu/caixa.png" alt="Caixa">
                 <p>Fluxo de Caixa</p>
              </a>
-             <a href="/financas" class="button-menu">
+             <a href="/financiamento" class="button-menu">
                 <img src="/imagem/menu/financas.png" alt="Finanças">
                 <p>Financiamento</p>
+             </a>
+             <a href="/compra" class="button-menu">
+                <img src="" alt="Compra">
+                <p>Compra</p>
+             </a>
+             <a href="/fornecedor" class="button-menu">
+                <img src="/imagem/menu/fornecedor.png" alt="Fornecedor">
+                <p>Fornecedor</p>
              </a>
               
             <a href="/" class="button-menu">
