--- a/src/view/Balanco/escolherBanco.html
+++ b/src/view/Balanco/escolherBanco.html
@@ -30,7 +30,7 @@
                 <img src="/imagem/menu/caixa.png" alt="Caixa">
                 <p>Fluxo de Caixa</p>
              </a>
-             <a href="/financas" class="button-menu">
+             <a href="/financiamento" class="button-menu">
                 <img src="/imagem/menu/financas.png" alt="Finanças">
                 <p>Financiamento</p>
              </a>
@@ -43,49 +43,45 @@
         
     </div>
     
-    
     <div class="main">
         <h1>
-            Cadastrar Financiamento
-            
+            Fechamento de Conta
+            <a href="/ativoCirculante">
+                <img src="/imagem/voltar.png" alt="">
+                Voltar
+            </a>
         </h1>
-    
-        <form name="FormFinanciamento" action="/criarConta" method="POST">
-            <fieldset  id="dados-Parcelas" class="dados-Botton">
-                <div class="title">
-                    <legend>{{titulo}}</legend>
-                </div>
+       
+        
+        <form name="FormConta" action="/excluirConta" method="POST">
 
-                <table id="tabela-financiamento">
-                    <tr>
-                        <td id="tempo" class="titulo">Nome Conta</td>
-                        <td class="titulo">Valor Conta</td>
-                        <td class="titulo">Data Vencimento</td>
-                    </tr>
-                    {%for registro in resultadoConta%}
-                        <tr>
-                            <td class="{{registro.tipoConta}}">{{registro.tempo}} ({{registro.tipoConta}}) </td>
-                            <td class="{{registro.tipoConta}}">R${{registro.valor}}</td>
-                            <td class="{{registro.tipoConta}}">{{registro.diaPagamento}} / {{registro.mesPagamento}} / {{registro.anoPagamento}}</td>
-                        </tr>
-                    {%endfor%}
-                </table>  
-                
-                <div class="legenda">
-                    <div class="legCarencia"><p>Período de Carências</p></div>
-                
-                    <div class="legParcela"><p>Período de Quitação</p></div>
-                </div>            
-            </fieldset>
-
-            <button type="submit" class="btn_calcular" name="btn_calcular">Salvar</button>
-        </form>  
+            {%if numeroBancos!=0%}
+                <fieldset name="dadosConta" class="dados-Top">
+                    <div class="title">
+                        <legend>Escolha uma conta</legend>
+                    </div>
+                    <div class="write-block">
+                        <label for="codConta">Conta:</label>
+                        <select name="codConta" id="codConta" required>
+                            <option value="" disable="" hidden="">Selecione uma opção</option>
+                            {%for conta in contas%}
+                                <option value={{conta.cod_conta}}>CONTA {{conta.tipo_conta}} {{conta.nome_banco}}</option> 
+                            {%endfor%}
+                        </select>
+                    </div>
+                    
+                    <button type="submit" class="btn_calcular" name="btn_calcular">Fechar Conta</button>
+                </fieldset> 
+            {%else%}
+                <h1 style="font-size: 30px; font-weight: normal;">Não há contas com saldo zerado para serem fechadas.</h1>
+            {%endif%}
+                           
+        </form>        
     </div>
 
     
 </body>
 <script language="JavaScript">
-    
     function semCarencia() {
         document.getElementById('valor-carencia').style.visibility = 'hidden';
     }
