--- a/src/view/Balanco/escolherContaDeposito.html
+++ b/src/view/Balanco/escolherContaDeposito.html
@@ -42,37 +42,43 @@
         </div>   
         
     </div>
-
+    
     <div class="main">
         <h1>
-            Editar Entrada
-            <a href="/entrada">
+            Deposito
+            <a href="/ativoCirculante">
                 <img src="/imagem/voltar.png" alt="">
                 Voltar
             </a>
         </h1>
-
-        <form>
-            <fieldset class="dados-Top">
-                <div class="title">
-                    <legend>Dados Entrada</legend>
-                </div>
-                <div class="read-block">
-                    <label for="nomeEntrada">Noma da Entrada:</label>
-                    <p class="input">{{entrada.nome_entrada}}</p>
-                </div>
-                <div class="read-block">
-                    <label for="valorEntrada">Valor Fixo da Entrada:</label>
-                    <p class="input">R$ {{entrada.valor_entrada}}</p>
-                </div>
-                <div class="read-block">
-                    <label for="nomeEntrada">Data da Entrada:</label>
-                    <p class="input">{{entrada.validade_entrada}}</p>
-                </div>
-            </fieldset>
-        </form>   
        
+        
+        <form name="FormConta" action="/depositar" method="POST">
 
+            <fieldset name="dadosConta" class="dados-Top">
+                <div class="title">
+                    <legend>Escolha uma conta</legend>
+                </div>
+                <div class="write-block">
+                    <label for="codConta">Conta:</label>
+                    <select name="codConta" id="codConta" required>
+                        <option value="" disable="" hidden="">Selecione uma opção</option>
+                        {%for conta in contas%}
+                            <option value={{conta.cod_conta}}>CONTA {{conta.tipo_conta}} {{conta.nome_banco}}</option> 
+                        {%endfor%}
+                    </select>
+                </div>
+
+                <div class="write-block">
+                    <label for="valorDeposito">Valor do Deposito:</label>
+                    <input type="number" id="valorDeposido" name="valorDeposito" min=1 max={{minimoDeposito}} step=".01" placeholder="R$ 000.00" required>
+                </div>
+                
+                <button type="submit" class="btn_calcular" name="btn_calcular">Depositar</button>
+            </fieldset>         
+        </form>        
     </div>
+
+    
 </body>
 </html>
