--- a/src/view/Balanco/escolherContaTransferenciaII.html
+++ b/src/view/Balanco/escolherContaTransferenciaII.html
@@ -42,37 +42,54 @@
         </div>   
         
     </div>
-
+    
     <div class="main">
         <h1>
-            Editar Entrada
-            <a href="/entrada">
+            Transferência
+            <a href="/transferir">
                 <img src="/imagem/voltar.png" alt="">
                 Voltar
             </a>
         </h1>
-
-        <form>
-            <fieldset class="dados-Top">
-                <div class="title">
-                    <legend>Dados Entrada</legend>
-                </div>
-                <div class="read-block">
-                    <label for="nomeEntrada">Noma da Entrada:</label>
-                    <p class="input">{{entrada.nome_entrada}}</p>
-                </div>
-                <div class="read-block">
-                    <label for="valorEntrada">Valor Fixo da Entrada:</label>
-                    <p class="input">R$ {{entrada.valor_entrada}}</p>
-                </div>
-                <div class="read-block">
-                    <label for="nomeEntrada">Data da Entrada:</label>
-                    <p class="input">{{entrada.validade_entrada}}</p>
-                </div>
-            </fieldset>
-        </form>   
        
+        
+        <form name="FormConta" action="/transferir" method="POST">
+            <fieldset name="dadosConta" class="dados-Top">
+                <div class="title">
+                    <legend>Origem da Transferência</legend>
+                </div>
+                <div class="write-block">
+                    <div class="read-block">
+                        <label for="emailFornecedor">Conta Origem:</label>
+                        <p class="input">{{conta}}</p>
+                    </div>  
+                </div>              
 
+                <div class="write-block">
+                    <label for="valorTransferir">Valor da Transferência:</label>
+                    <input type="number" id="valorTransferir" name="valorTransferir" min=1 max={{maximaTransferencia}} step=".01" placeholder="R$ 000.00" required>
+                </div>
+            </fieldset> 
+            <fieldset name="dadosConta" class="dados-Top">
+                <div class="title">
+                    <legend>Destino da Transferência</legend>
+                </div>
+                <div class="write-block">
+                    <label for="codConta">Conta de destino:</label>
+                    <select name="codConta" id="codConta" required>
+                        <option value="" disable="" hidden="">Selecione uma opção</option>
+                        {%for conta in contas%}
+                            <option value={{conta.cod_conta}}>CONTA {{conta.tipo_conta}} {{conta.nome_banco}}</option> 
+                        {%endfor%}
+                    </select>
+                </div>
+                
+                <button type="submit" class="btn_calcular" name="btn_calcular">Transferir</button>
+            </fieldset>   
+  
+        </form>        
     </div>
+
+    
 </body>
 </html>
