--- a/src/view/FluxoCaixa/saida.html
+++ b/src/view/FluxoCaixa/saida.html
@@ -30,7 +30,7 @@
                 <img src="/imagem/menu/caixa.png" alt="Caixa">
                 <p>Fluxo de Caixa</p>
              </a>
-             <a href="/financas" class="button-menu">
+             <a href="/financiamento" class="button-menu">
                 <img src="/imagem/menu/financas.png" alt="Finanças">
                 <p>Financiamento</p>
              </a>
